1.21 compatability